Adicionado Identity e JWT authentication

--- a/TicketComplaint/appsettings.json
+++ b/TicketComplaint/appsettings.json
@@ -7,5 +7,11 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtBearerTokenSettings": {
+    "SecretKey": "ThisIsSomeSampleSymmetricEncryptionKey",
+    "Audience": "https://localhost:44322/",
+    "Issuer": "https://localhost:44322/",
+    "ExpiryTimeInSeconds": 60
+  }
 }
